--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "joi": "^17.11.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.1",
     "next": "14.0.2",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "stripe": "^14.4.0",
     "tailwindcss": "3.3.5"
