--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@stripe/stripe-js": "^2.1.11",
     "autoprefixer": "10.4.16",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
     "firebase": "^10.6.0",
     "joi": "^17.11.0",
     "js-cookie": "^3.0.5",
